fix: :lipstick: dynamic dark mode vibrancy switching

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,7 @@
+* {
+  transition: all 0.25s ease;
+}
+
 .container {
   position: relative;
   height: 100%;
